fix for bug #33090 (mysql_prepare doesn't return error)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@186719 c90b9560-bf6c-de11-be94-00142212c4b1